--- a/app/views/settings/_shibboleth_settings.html.erb
+++ b/app/views/settings/_shibboleth_settings.html.erb
@@ -1,22 +1,20 @@
 <div class="box"> 
  <h3>General configuration</h3>
   <p>
-    <label for="settings_enable_shibboleth">
-    Activate shibboleth authentication
-    </label>
+    <%== label_tag("settings[enable_shibboleth]", l(:label_enable_shibboleth)) %>
     <%= check_box_tag 'settings[enable_shibboleth]', nil, settings['enable_shibboleth'] %>
   </p>
   <p>
-    <label for="settings_use_only_shibboleth">
-    Use only the shibboleth authentication
-    </label>
+    <%== label_tag("settings[use_only_shibboleth]", l(:label_use_only_shibboleth)) %>
     <%= check_box_tag 'settings[use_only_shibboleth]', nil, settings['use_only_shibboleth'] %>
   </p>
   <p>
-    <label for="settings_enable_autocreate_account">
-    Auto-create shibboleth account
-    </label>
-    <%= check_box_tag 'settings[enable_autocreate_account]', nil, settings['enable_autocreate_account'] %>
+    <%== label_tag("settings[autocreate_account]", l(:label_autocreate_account)) %> 
+    <%== select_tag("settings[autocreate_account]",
+                 options_for_select([[l(:label_disabled), "0"], [l(:label_registration_activation_by_email), "1"],
+                 [l(:label_registration_manual_activation), "2"], [l(:label_registration_automatic_activation), "3"]], @settings['autocreate_account'].to_s),
+                 :multiple => false,
+                 :size => 1) %>
   </p>
 </div>
 
@@ -24,17 +22,17 @@
   <h3>Attribute mapping</h3>
   <p>
     <label for="settings_header_uniqueid">
-      uniqueID header name
-      <span class="required"> *</span>
+     uniqueid header name
+     <span class="required"> *</span>
     </label>
-    <input type="text" id="settings_header_uniqueid" value="<%= settings['header_uniqueid'] %>" name="settings[header_uniqueid]">
+    <%= text_field_tag 'settings[header_uniqueid]', @settings['header_uniqueid'] %>
   </p>
   <p>
     <label for="settings_header_surname">
       surname header name
       <span class="required"> *</span>
     </label>
-    <input type="text" id="settings_header_surname" value="<%= settings['header_surname'] %>" name="settings[header_surname]">
+    <%= text_field_tag 'settings[header_surname]', @settings['header_surname'] %>
     <span>___ update user profile on each login </span><%= check_box_tag 'settings[update_surname]', nil, settings['update_surname'] %>
   </p>
   <p>
@@ -42,7 +40,7 @@
       givenName header name
       <span class="required"> *</span>
     </label>
-    <input type="text" id="settings_header_givenname" value="<%= settings['header_givenname'] %>" name="settings[header_givenname]">
+    <%= text_field_tag 'settings[header_givenname]', @settings['header_givenname'] %>
     <span>___ update user profile on each login </span><%= check_box_tag 'settings[update_givenname]', nil, settings['update_givenname'] %>
   </p>
   <p>
@@ -50,7 +48,7 @@
       mail header name 
       <span class="required"> *</span>
     </label>
-    <input type="text" id="settings_header_mail" value="<%= settings['header_mail'] %>" name="settings[header_mail]">
+    <%= text_field_tag 'settings[header_mail]', @settings['header_mail'] %>
     <span>___ update user profile on each login </span><%= check_box_tag 'settings[update_mail]', nil, settings['update_mail'] %>
   </p>
 </div>
