comment attribute update options (not yet implemented)

--- a/app/views/settings/_shibboleth_settings.html.erb
+++ b/app/views/settings/_shibboleth_settings.html.erb
@@ -36,7 +36,7 @@
       <span class="required"> *</span>
     </label>
     <%= text_field_tag 'settings[header_surname]', @settings['header_surname'] %>
-    <span>___ update user profile on each login </span><%= check_box_tag 'settings[update_surname]', nil, settings['update_surname'] %>
+    <!-- <span>___ update user profile on each login </span><%= check_box_tag 'settings[update_surname]', nil, settings['update_surname'] %> -->
   </p>
   <p>
     <label for="settings_header_givenname">
@@ -44,7 +44,7 @@
       <span class="required"> *</span>
     </label>
     <%= text_field_tag 'settings[header_givenname]', @settings['header_givenname'] %>
-    <span>___ update user profile on each login </span><%= check_box_tag 'settings[update_givenname]', nil, settings['update_givenname'] %>
+    <!-- <span>___ update user profile on each login </span><%= check_box_tag 'settings[update_givenname]', nil, settings['update_givenname'] %> -->
   </p>
   <p>
     <label for="settings_header_mail">
@@ -52,6 +52,6 @@
       <span class="required"> *</span>
     </label>
     <%= text_field_tag 'settings[header_mail]', @settings['header_mail'] %>
-    <span>___ update user profile on each login </span><%= check_box_tag 'settings[update_mail]', nil, settings['update_mail'] %>
+    <!-- <span>___ update user profile on each login </span><%= check_box_tag 'settings[update_mail]', nil, settings['update_mail'] %> -->
   </p>
 </div>
