escape chars in target query (shibb login url)

--- a/app/views/hooks/redmine_shibboleth_auth/_login_shibboleth_link.erb
+++ b/app/views/hooks/redmine_shibboleth_auth/_login_shibboleth_link.erb
@@ -2,8 +2,7 @@
   <h2 style="text-align: center">
     <a href="<%= 
                shib_uri = Setting.plugin_redmine_shibboleth_auth['shibb_login_handle'] \
-                 + '?' \
-                 + URI::escape(request.env['QUERY_STRING'], '&')
+                 + URI::escape('?' + request.env['QUERY_STRING'], '?=&')
              %>">Login with Shibboleth</a>
   </h2>
 </div>
