--- a/app/views/hooks/_login_shibboleth_link.erb
+++ b/app/views/hooks/_login_shibboleth_link.erb
@@ -3,6 +3,7 @@
     <a href="<%= 
                shib_uri = Setting.plugin_redmine_shibboleth_auth['shibb_login_handle'] \
                  + URI::escape('?' + request.env['QUERY_STRING'], '?=&')
-             %>">Login with Shibboleth</a>
+             %>"><%= l(:label_shibb_login_link) %>
+    </a>
   </h2>
 </div>
